<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!--style="@android:style/Theme.Material" >-->

    <!-- Current Streak View -->
    <TextView
        android:id="@+id/label_current_streak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/label_value_zero"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
        <!--style="@android:style/TextAppearance.Material.Large" />-->

    <!-- Statistics View -->

    <LinearLayout
        android:id="@+id/linear_layout_session_success_rate"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:paddingHorizontal="8dp"
        app:layout_constraintTop_toBottomOf="@id/label_current_streak"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_streaks">

        <TextView
            android:id="@+id/label_session_success_rate"
            android:text="@string/label_session_success_rate"
            android:layout_marginHorizontal="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/label_session_success_rate_value"
            android:text="@string/label_value_zero_f"
            android:layout_marginHorizontal="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_streaks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_session_success_rate"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout_longest_streak">

        <TextView
            android:id="@+id/label_streaks"
            android:text="Streaks:"
            android:layout_marginHorizontal="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/label_streaks_count"
            android:text="0"
            android:layout_marginHorizontal="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_longest_streak"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_session_success_rate"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_average_streak_length">

        <TextView
            android:id="@+id/label_longest_streak"
            android:text="@string/label_longest_streak"
            android:layout_marginHorizontal="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/label_longest_streak_count"
            android:text="@string/label_value_zero"
            android:layout_marginHorizontal="4dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_average_streak_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_session_total"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_longest_streak">

        <TextView
            android:id="@+id/label_average_streak_length"
            android:text="@string/label_average_streak_length"
            android:layout_marginHorizontal="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/label_average_streak_length_value"
            android:text="@string/label_value_zero_f"
            android:layout_marginHorizontal="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_session_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layoutDirection="ltr"
        android:paddingHorizontal="8dp"
        app:layout_constraintBottom_toTopOf="@id/linear_layout_plus_minus_buttons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_average_streak_length">

        <TextView
            android:id="@+id/label_session_total"
            android:text="@string/label_session_total"
            android:layout_marginHorizontal="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/label_session_total_count"
            android:text="@string/label_value_zero"
            android:layout_marginHorizontal="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <!-- Controls -->
    <LinearLayout
        android:id="@+id/linear_layout_plus_minus_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layoutDirection="ltr"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_session_total">
        <!--style="?android:attr/buttonBarStyle">-->

        <Button
            android:id="@+id/button_minus"
            android:layout_height="@dimen/button_height_medium"
            android:layout_width="@dimen/button_width_medium"
            android:text="@string/label_minus"
            android:textSize="@dimen/text_size_medium" />
            <!--style="?android:attr/buttonBarNegativeButtonStyle" />-->

        <Button
            android:id="@+id/button_plus"
            android:layout_height="@dimen/button_height_medium"
            android:layout_width="@dimen/button_width_medium"
            android:text="@string/label_plus"
            android:textSize="@dimen/text_size_medium" />
            <!--style="?android:attr/buttonBarPositiveButtonStyle" />-->
    </LinearLayout>

    <Button
        android:id="@+id/button_reset"
        android:text="@string/label_reset"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:layout_height="60dp"
        android:layout_width="140dp"
        android:layout_marginTop="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_plus_minus_buttons" />
        <!--style="@android:style/Widget.Material.ActionButton" />-->

</androidx.constraintlayout.widget.ConstraintLayout>